<resources>
    <string name="app_name">HW1</string>
    <string name="authorization">Authorization</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="subscribe">Subscribe</string>
    <string name="sign_in">sign in</string>
    <string name="add_info">Add information about yourself:</string>
    <string name="user_name">User name</string>
    <string name="password_task2">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="age">Age</string>
    <string name="ac" translatable="false">AC</string>
    <string name="sign" translatable="false">+/-</string>
    <string name="percent" translatable="false">%</string>
    <string name="degree" translatable="false">/</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="minus" translatable="false">-</string>
    <string name="_1" translatable="false">1</string>
    <string name="_9" translatable="false">9</string>
    <string name="multi" translatable="false">*</string>
    <string name="_4" translatable="false">4</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="plus" translatable="false">+</string>
    <string name="_0" translatable="false">0</string>
    <string name="comma" translatable="false">,</string>
    <string name="equal" translatable="false">=</string>
</resources>