<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/padding_all">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ac"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/ac" />

        <Button
            android:id="@+id/button_sign"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/sign" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/percent" />

        <Button
            android:id="@+id/button_degree"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/degree" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button_multi"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/multi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button_comma"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comma" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change"
            android:text="@string/equal" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>